Changement du nom au niveau du controller et de la vue

--- a/templates/admin/register_collector.html.twig
+++ b/templates/admin/register_collector.html.twig
@@ -15,7 +15,7 @@
         {{ form_row(registrationCollectorForm.city, { 'label': 'Ville' }) }}
         {{ form_row(registrationCollectorForm.phoneNumber, { 'label': 'N° de téléphone' }) }}
         {{ form_row(registrationCollectorForm.email, { 'label': 'Email' }) }}
-        {{ form_row(registrationCollectorForm.plainPassword, { 'label': 'Mot de passe' }) }}
+        {{ form_row(registrationCollectorForm.password, { 'label': 'Mot de passe' }) }}
 
         <button class="fourth-button">Valider le collecteur</button>
     {{ form_end(registrationCollectorForm) }}
