--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -34,7 +34,7 @@
             {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
         </div>
         <div class="col-12">
-            {{ form_row(registrationForm.plainPassword, { 'label': 'Mot de passe' }) }}
+            {{ form_row(registrationForm.password) }}
         </div>
         <div class="col-12">
             {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
