Adding help to organism form

--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="editTitle">Modifier Partenaire</h1>
+    <h1 class="primary-title">Modifier Partenaire</h1>
 
     {{ include('organisms/_form.html.twig', {'button_label': 'Modifier'}) }}
     <button class="secondary-button">Modifier</button>
