--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,10 @@
 @import "vars";
 @import '~bootstrap/scss/bootstrap';
 
+$custom-file-text: (
+        en: "Browse",
+        fr: "Parcourir"
+);
 
 /* Boutons */
 
