--- a/templates/organisms/new.html.twig
+++ b/templates/organisms/new.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="addTitle">Ajouter un partenaire</h1>
+    <h1 class="primary-title">Ajouter un partenaire</h1>
 
     {{ include('organisms/_form.html.twig') }}
     <button class="secondary-button">Ajouter</button>
