Suppression de l'accès à un profil utilisateur, seulement accès à l'admin si user collecteur ou user admin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,10 +27,8 @@
                     {% if app.user %}
                         <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
                         <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
-                        {% if app.user.roles == ["ROLE_USER"] %}
-                            <a href="#" title="Page profil" class="fourth-button">Mon profil</a>
-                        {% else %}
-                            <a href="{{ path('home_admin') }}" title="Page Admin" class="fourth-button">Accéder à la plateforme d'administration</a>
+                        {% if app.user.roles == ["ROLE_COLLECTOR"] or ["ROLE_ADMIN"] %}
+                            <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="fourth-button">Accéder à la plateforme d'administration</a>
                         {% endif %}
 
                     {% else %}
