Adding a picture into of signature in the PDF

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
-{% block title %}PDF estimation{% endblock %}
+{# this twig generate the PDF #}
+{% block title %}Bon de Cession - PDF{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="https://use.typekit.net/xdq8cqe.css">
     <style>
@@ -172,7 +173,7 @@
                 <img width="100px; margin-top:30px;" src="images/cachet.png" alt="BipBip Mobile">
             </td>
             <td style="width:50%; border:2px solid black;">
-
+                <img width="100px; margin-top:30px;" src="uploads/signatures/signature.jpg" alt="BipBip Mobile">
             </td>
         </tr>
     </table>
