--- a/assets/scss/newPartner.scss
+++ b/assets/scss/newPartner.scss
@@ -1,5 +1,8 @@
 @import "vars";
 
+.primary-title{
+    font-size: 25px;
+}
 .addTitle {
     text-align: center;
 }
@@ -8,3 +11,10 @@
     display: block;
     text-align: center;
 }
+
+.back{
+    margin: 0 auto 20px auto;
+}
+ .add {
+     margin: 5px auto 20px auto;
+ }
