--- a/assets/scss/editPartner.scss
+++ b/assets/scss/editPartner.scss
@@ -2,6 +2,7 @@
 
 .editTitle {
     text-align: center;
+    margin-top: 20px;
 }
 
 
@@ -10,7 +11,7 @@
     text-align: center;
     margin-left: 20%;
     @media screen and (min-width: 740px){
-        margin-left: 42%;
+        margin: 10px auto;
     }
 }
 
