--- a/assets/scss/partnerPage.scss
+++ b/assets/scss/partnerPage.scss
@@ -8,12 +8,25 @@
 
     img {
         width: 30%;
-        margin: 10% 34% 5%;
+        margin: 1% 35% 5%;
+        @media screen and (min-width: 740px){
+            width: 20%;
+            margin: 2% auto 5% 41%;
+        }
+
     }
 
     #clickLink {
         font-size: 1em;
         margin-top: 20px;
+
+        .secondary-button {
+            margin-bottom: 0;
+        }
+
+        .edit {
+            margin: 0 auto auto auto;
+        }
 
         a{
             display: block;
