Adding a shop for phone selling

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Administration {% endblock %}
+{% block title %}Administration BipBip{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('admin') }}
