--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil BipBip{% endblock %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('home') }}
