--- a/templates/faq/new.html.twig
+++ b/templates/faq/new.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/index.html.twig' %}
 
 {% block title %}Nouvel question{% endblock %}
 
 {% block body %}
-    <h1>Créer une nouvelle question</h1>
+    <h1 class="primary-title">Créer une nouvelle question</h1>
 
     {{ include('faq/_form.html.twig') }}
 
