--- a/templates/estimation/final_price.html.twig
+++ b/templates/estimation/final_price.html.twig
@@ -10,10 +10,17 @@
                 <h2 class="text-dark">Ton téléphone a une valeur de :</h2>
                 <h3 class="secondary-button">{{ estimation.estimatedPrice }} Euros</h3>
                 {% endif %}
+                {% if app.user %}
                 <div class="jumbotron">
-                    <h4>Pour finaliser la vente de ton téléphone, tu dois créer ton compte et accéder aux lieux de collecte</h4>
+                    <h4>Pour finaliser la vente de ton téléphone, </h4>
+                    <a class="btn btn-primary" href="{{ path("show_collect") }}">Choisis une collecte</a>
+                </div>
+                {% else %}
+                <div class="jumbotron">
+                    <h4>Pour finaliser la vente de ton téléphone, crée ton compte et accède aux lieux de collecte</h4>
                     <a class="btn btn-primary" href="{{ path("estimation_register_user", {estimation: estimation.id}) }}">Créer mon compte</a>
                 </div>
+                {% endif %}
 
             </div>
         </div>
