Adding officials logos for social network

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,17 +88,14 @@
                 </li>
             </ul>
             <div class="social-networks">
-                <a href="#" title="Lien vers la page facebook">
-                    <img src="/images/facebook.png" alt="logo de Facebook" />
+                <a href="#" target="_blank" title="Page Facebook">
+                    <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" />
                 </a>
-                <a href="#" title="Lien vers la page Instagram">
-                    <img src="/images/instagram.png" alt="logo d'Instagram" />
+                <a href="#" target="_blank" title="Instagram">
+                    <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" />
                 </a>
-                <a href="#" title="Lien vers le compte Twitter">
-                    <img src="/images/linkedin.png" alt="logo de Twitter" />
-                </a>
-                <a href="#">
-                    <img src="/images/like.png" alt="Like" />
+                <a href="#" target="_blank" title="LinkedIn">
+                    <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" />
                 </a>
             </div>
         </footer>
