--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
     {{ encore_entry_link_tags('final_estimation') }}
+    {{ parent() }}
 {% endblock %}
 {% block body %}
 <main id="final_estimation">
