--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,7 @@
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('login') }}
+    {{ parent() }}
 {% endblock %}
 
 {% block title %}Connecte toi !{% endblock %}
