--- a/templates/user/confirmCollect.html.twig
+++ b/templates/user/confirmCollect.html.twig
@@ -30,6 +30,14 @@
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-6 mt-5">
+                <a class="btn fourth-button" href="">Voir nos partenaires</a>
+            </div>
+            <div class="col-6 mt-5">
+                <a class="btn fourth-button" href="">Retour à l'accueil</a>
+            </div>
+        </div>
     </main>
 {% endblock %}
 
