fix path for button return accueil and show partner on confirm collect page

--- a/templates/user/confirmCollect.html.twig
+++ b/templates/user/confirmCollect.html.twig
@@ -32,10 +32,10 @@
         </div>
         <div class="row">
             <div class="col-6 mt-5">
-                <a class="btn fourth-button" href="">Voir nos partenaires</a>
+                <a class="btn fourth-button" href="{{ path('organisms_index') }}">Voir nos partenaires</a>
             </div>
             <div class="col-6 mt-5">
-                <a class="btn fourth-button" href="">Retour à l'accueil</a>
+                <a class="btn fourth-button" href="{{ path('home') }}">Retour à l'accueil</a>
             </div>
         </div>
     </main>
