fix routes bug for admin panel

--- a/templates/estimations/editEstim.html.twig
+++ b/templates/estimations/editEstim.html.twig
@@ -181,7 +181,7 @@
                 <a href="{{ path('estimations_index') }}" class="btn btn-dark"><- Précédent</a>
             </div>
             <div class="col-8 mx-auto text-right form p-4">
-                <a href="{{ path('remove_estimationBrand', {id: estimation.id}) }}" class="btn btn-info">Mettre à jour</a>
+                <a href="{{ path('modify_estimationBrand', {id: estimation.id}) }}" class="btn btn-info">Mettre à jour</a>
                 <a href="{{ path('verifyUser', { id: estimation.id}) }}" class="btn btn-success">Informations vérifiées, étape suivante -></a>
             </div>
         </div>
