--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,46 +2,52 @@
 
 {% block title %}Inscris toi !{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('signup') }}
+{% endblock %}
+
 {% block body %}
-    <h1 class="primary-title">Inscription</h1>
+    <main id="registration">
+        <h1 class="primary-title">Inscription</h1>
 
-    {{ form_start(registrationForm) }}
-    <div class="container">
-        <div class="col-12">
-            <p>Afin d'accéder aux points de collecte te concernant, appartiens-tu à un des organismes de la liste ci-dessous ?</p>
-            {{ form_row(registrationForm.organism, { 'label': 'Organismes partenaires de Bip Bip Mobile :' }) }}
-            <p>Tu souhaites que ton entreprise ou ton école organise une collecte ? N'hésite pas à <a href="{{ path('add_message') }}">nous envoyer un message !</a></p>
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.address, { 'label': 'Adresse' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone ', 'attr': {'class': '', 'placeholder': 'ex: 0635000000'} }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.password) }}
-        </div>
-        <div class="col-12">
-            {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepter les termes' }) }}
-        </div>
+        {{ form_start(registrationForm) }}
+        <div class="container">
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                <p>Afin d'accéder aux points de collecte te concernant, appartiens-tu à un des organismes de la liste ci-dessous ?</p>
+                {{ form_row(registrationForm.organism, { 'label': 'Organismes partenaires de Bip Bip Mobile :', 'label_attr': {'class': 'label-registration-form'} }) }}
+                <p class="contact-link">Tu souhaites que ton entreprise ou ton école organise une collecte ? N'hésite pas à nous envoyer un message en <a href="{{ path('add_message') }}" class="font-italic">cliquant ici !</a></p>
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.firstname, { 'label': 'Prénom' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.lastname, { 'label': 'Nom' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.address, { 'label': 'Adresse' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.postcode, { 'label': 'Code Postal' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.city, { 'label': 'Ville' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.phoneNumber, { 'label': 'N° de téléphone ', 'attr': {'class': '', 'placeholder': 'ex: 0635000000'} }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.email, { 'label': 'Email' }) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.password) }}
+            </div>
+            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+                {{ form_row(registrationForm.agreeTerms, { 'label': 'J\'accepte les termes des conditions générales d\'utilisation' }) }}
+            </div>
 
-    </div>
-
+        </div>
+    </main>
 
         <button class="fourth-button">S'inscrire</button>
     {{ form_end(registrationForm) }}
