Delete message flash before PDF generation, already in base admin

--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -40,6 +40,7 @@
                 <p>Création du dossier : {{ "now"|date("d/m/Y") }}<br>
                 Numéro du bon de cession : {{ "now"|date("Ymd") }}C{{ estimation.user.id }}P{{ estimation.id }}</p>
                 <p>IMEI : {{ IMEI }}</p>
+                <p>{{ IMEI }}</p>
             </td>
             <td style="width:40%; padding-left:20px;">
                 <p>ENVIRO SERVICES FRANCE<br>
