--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -58,7 +58,7 @@
                 <div class="block">
                     <div>
                         <a href="{{ path('organisms_index') }}">Partenaires</a>
-                        <a href="{{ path('register_collector') }}">Collecteurs</a>
+                        <a href="{{ path('collectors_index') }}">Collecteurs</a>
                         <a href="{{ path('collects_index') }}">Collectes</a>
                         <a href="{{ path('matrice_upload') }}">Matrice</a>
                         <a href="{{ path('register_collector') }}">FAQ</a>
