--- a/templates/admin/modifyEstimationQuest.html.twig
+++ b/templates/admin/modifyEstimationQuest.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
     {{ encore_entry_link_tags('final_estimation') }}
+    {{ parent() }}
 {% endblock %}
 {% block body %}
     <main id="final_estimation">
@@ -91,6 +92,11 @@
                 </div>
             </div>
         </div>
+        <div>
+            <div>
+                IMEI: {{ form_widget(form.imei, {'attr': {'class': 'mx-4 p-4', 'placeholder': ''}}) }}
+            </div>
+        </div>
 
         <div class="container">
             <div class="row">
@@ -99,6 +105,7 @@
                     {{ form_end(form) }}
                 </div>
             </div>
+
         </div>
 
         <div class="row">
