--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                     {% if app.user %}
                         <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
                         <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
-                        {% if app.user.roles == ["ROLE_COLLECTOR"] or ["ROLE_ADMIN"] %}
+                        {% if app.user.roles == "ROLE_COLLECTOR" or app.user.roles == "ROLE_ADMIN" %}
                             <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="fourth-button">Accéder à la plateforme d'administration</a>
                         {% endif %}
 
