--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -95,15 +95,15 @@ header{
 
 // SearchBar
 #nameSearch{
-    margin-top: 25px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 4px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 
     input#search_nameSearch{
-        width: 70%;
+        width: 80%;
+        margin-left: 10%;
         padding: 6px;
-        border-radius: 5px;
+        border-radius: 12px;
+        font-size: x-large;
     }
 }
 
@@ -344,11 +344,9 @@ header{
 .resultSearch a {
     display : flex;
     flex-direction: column;
-    margin-bottom: 15px;
-    margin-left: 40px;
-    margin-right: 25px;
-    font-size: 1.3rem;
+    margin: 0 25px 15px 40px;
+    font-size: 2rem;
     font-style: italic;
-    text-decoration: none;
+    color : $fourth-color;
 }
 
