--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -16,6 +16,19 @@
     display : block;
     margin : 2% auto 5% auto;
     text-align : center;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    &:hover{
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        color : white;
+        text-decoration: none;
+    }
     @media screen and (min-width: 740px) {
         font-size: 1rem;
     }
@@ -53,8 +66,22 @@ main{
 }
 
 a{
-    color : black;
+    display: inline-block;
     cursor : pointer;
+    color : black;
+    text-decoration: none;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    &:hover{
+        color : black;
+        text-decoration: none;
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
 }
 
 .primary-title{
@@ -179,6 +206,7 @@ header{
             right : 5vw;
             bottom : 5vh;
             z-index : 5;
+            cursor : pointer;
 
             img{
                 width : 30%;
