--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Organisms{% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
     {{ encore_entry_link_tags('partnerPage') }}
 {% endblock %}
 
