--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -299,8 +299,8 @@ header{
         position: absolute;
         padding: 4px 2%;
         right: 200px;
-        bottom: 96%;
-        left: 77%;
+        bottom: 94%;
+        left: 72%;
         text-align: center;
         width: 150px;
 
@@ -316,7 +316,6 @@ header{
         }
 
         .faqHead {
-            background-color: $secondary-color;
             color: white;
             text-align: center;
             height: 100px;
@@ -330,8 +329,8 @@ header{
         }
 
         .fourth-button {
-            margin: 20px auto;
-            width: 120%;
+            margin: 20px auto 20px 80%;
+            width: 20%;
         }
 
         .editFaq {
