--- a/templates/faq/edit.html.twig
+++ b/templates/faq/edit.html.twig
@@ -2,12 +2,17 @@
 
 {% block title %}Modification{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('faq') }}
+{% endblock %}
+
 {% block body %}
     <h1 class="primary-title">Modifier</h1>
 
     {{ include('faq/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a class="fourth-button" href="{{ path('faq_index') }}">Retour à la liste</a>
+    <a class="fourth-button" href="{{ path('admin_faq_index') }}">Retour à la liste</a>
 
     {{ include('faq/_delete_form.html.twig') }}
 {% endblock %}
