--- a/templates/bdc/bdc.html.twig
+++ b/templates/bdc/bdc.html.twig
@@ -4,22 +4,6 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="https://use.typekit.net/xdq8cqe.css">
     <style>
-        @font-face {
-            font-family: 'Code 128';
-            src: url('fonts/Code128.woff2') format('woff2'),
-            url('fonts/Code128.woff') format('woff'),
-            url('fonts/Code128.svg#Code128') format('svg');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        .barcode {
-            font-family: 'Code 128', serif;
-            font-weight: normal;
-            font-style: normal;
-            font-size: 40px;
-        }
-
         .bold-text {
             font-weight: bold;
         }
@@ -56,7 +40,7 @@
                 <p>Création du dossier : {{ "now"|date("d/m/Y") }}<br>
                 Numéro du bon de cession : {{ "now"|date("Ymd") }}C{{ estimation.user.id }}P{{ estimation.id }}</p>
                 <p>IMEI : {{ IMEI }}</p>
-                <p class="barcode">*{{ IMEI }}*</p>
+                <img width="200px; margin-top:30px;" src="barcodes/2.png" alt="BipBip Mobile">
             </td>
             <td style="width:40%; padding-left:20px;">
                 <p>ENVIRO SERVICES FRANCE<br>
