--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -16,8 +16,8 @@
     display : block;
     margin : 2% auto 5% auto;
     text-align : center;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
@@ -66,21 +66,11 @@ main{
 }
 
 a{
-    display: inline-block;
-    cursor : pointer;
     color : black;
     text-decoration: none;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
     &:hover{
         color : black;
         text-decoration: none;
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
     }
 }
 
