--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -243,8 +243,11 @@
 
             a {
                 display : block;
-                width : 12%;
+                width : 18%;
                 margin: 4%;
+                @media screen and (min-width: 740px) {
+                    width : 12%;
+                }
 
                 img {
                     width: 100%;
