import app.css in admin and correct bug color searchbar

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -35,7 +35,7 @@
 </header>
 
 <div id="nameSearch">
-    <input type="text" id="search_nameSearch">
+    <input type="text" id="search_nameSearch" class="border">
 </div>
 
 <nav class="menu-admin">
