--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -94,17 +94,18 @@ header{
 }
 
 // SearchBar
-#nameSearch{
+#nameSearch {
     margin-top: 30px;
     margin-bottom: 30px;
 
-    input#search_nameSearch{
+    #search_nameSearch {
         width: 80%;
         margin-left: 10%;
         padding: 6px;
         border-radius: 12px;
-        font-size: x-large;
-    }
+        font-size: large;
+
+        }
 }
 
 // Menu gauche
