--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -42,9 +42,15 @@
                 <div class="col-3 text-center ">
                     {{ estimation.estimatedPrice }} €
                 </div>
-                <a class="col-2 fourth-button" href="{{ path('verifyEstim', {id: estimation.id}) }}">
-                    Collecter
-                </a>
+                {% if estimation.isCollected == 0 %}
+                    <a class="col-2 fourth-button" href="{{ path('verifyEstim', {id: estimation.id}) }}">
+                        Collecter
+                    </a>
+                {% else %}
+                    <a class="col-2 fourth-button" href="{{ path('estimations_show', {id: estimation.id}) }}">
+                        Détails
+                    </a>
+                {% endif %}
             </div>
         {% endfor %}
     </main>
