--- a/templates/estimations/show.html.twig
+++ b/templates/estimations/show.html.twig
@@ -1,87 +1,81 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Estimations{% endblock %}
+{% block title %}Détails Estimation{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     {{ encore_entry_link_tags('showEstimationAdmin') }}
 {% endblock %}
 {% block body %}
-    <h1 class="primary-title">Estimations</h1>
+    <main id="estimations-show">
+        <h2 class="primary-title">Détails Estimation</h2>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ estimation.id }}</td>
-            </tr>
-            <tr>
-                <th>EstimationDate</th>
-                <td>{{ estimation.estimationDate ? estimation.estimationDate|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>IsCollected</th>
-                <td>{{ estimation.isCollected ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Model</th>
-                <td>{{ estimation.model }}</td>
-            </tr>
-            <tr>
-                <th>Capacity</th>
-                <td>{{ estimation.capacity }}</td>
-            </tr>
-            <tr>
-                <th>Brand</th>
-                <td>{{ estimation.brand }}</td>
-            </tr>
-            <tr>
-                <th>Color</th>
-                <td>{{ estimation.color }}</td>
-            </tr>
-            <tr>
-                <th>LiquidDamage</th>
-                <td>{{ estimation.liquidDamage }}</td>
-            </tr>
-            <tr>
-                <th>ScreenCracks</th>
-                <td>{{ estimation.screenCracks }}</td>
-            </tr>
-            <tr>
-                <th>CasingCracks</th>
-                <td>{{ estimation.casingCracks }}</td>
-            </tr>
-            <tr>
-                <th>BatteryCracks</th>
-                <td>{{ estimation.batteryCracks }}</td>
-            </tr>
-            <tr>
-                <th>ButtonCracks</th>
-                <td>{{ estimation.buttonCracks }}</td>
-            </tr>
-            <tr>
-                <th>MaxPrice</th>
-                <td>{{ estimation.maxPrice }}</td>
-            </tr>
-            <tr>
-                <th>EstimatedPrice</th>
-                <td>{{ estimation.estimatedPrice }}</td>
-            </tr>
-            <tr>
-                <th>IsValidatedPayment</th>
-                <td>{{ estimation.isValidatedPayment ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
+        {% if estimation.user is not null%}
+            <h3>{{  estimation.user.firstname }} {{ estimation.user.lastname }}</h3>
+        {% else %}
+            <h3>Utilisateur Anonyme</h3>
+        {% endif %}
 
-                <th>IsValidatedCi</th>
-                <td>{{ estimation.isValidatedCi ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
-<section>
-    <a class="fourth-button" href="{{ path('estimations_index') }}">Back to list</a>
+        <div class="tables">
+            <table class="table-left">
+                <tbody>
+                    <tr>
+                        <th>Date d'estimation</th>
+                        <td>{{ estimation.estimationDate ? estimation.estimationDate|date('d-m-Y H:i') : '' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Collecté ?</th>
+                        <td>{{ estimation.isCollected ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Marque</th>
+                        <td>{{ estimation.brand }}</td>
+                    </tr>
+                    <tr>
+                        <th>Modèle</th>
+                        <td>{{ estimation.model }}</td>
+                    </tr>
+                    <tr>
+                        <th>Capacité</th>
+                        <td>{{ estimation.capacity }}</td>
+                    </tr>
+                    <tr>
+                        <th>Prix estimé</th>
+                        <td>{{ estimation.estimatedPrice }}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-    <a class="fourth-button" href="{{ path('estimations_edit', {'id': estimation.id}) }}">Edit</a>
+            <table class="table-right">
+                <tbody>
+                    <tr>
+                        <th>Dommages causés par du liquide</th>
+                        <td>{{ estimation.liquidDamage ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Dommages au niveau de l'écran</th>
+                        <td>{{ estimation.screenCracks ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Dommages au niveau de la coque</th>
+                        <td>{{ estimation.casingCracks ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Batterie endommagée</th>
+                        <td>{{ estimation.batteryCracks ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Boutons endommagés</th>
+                        <td>{{ estimation.buttonCracks ? 'Oui' : 'Non' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <section>
+            <a class="fourth-button" href="{{ path('estimations_index') }}">Revenir à l'index</a>
 
-    <a class="fourth-button" href="{{ path('estimations_delete', {'id': estimation.id}) }}">Delete</a>
-</section>
+            {% if app.user.roles[0] == "ROLE_ADMIN" %}
+                <a class="fourth-button" href="{{ path('estimations_delete', {'id': estimation.id}) }}">Supprimer</a>
+            {% endif %}
+        </section>
+    </main>
 {% endblock %}
