--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -45,10 +45,10 @@
                 <h2 class="title">Estimations</h2>
                 <div class="block">
                     <div>
-                        <a href="{{ path ('estimations_index') }}">Toutes</a>
-                        <a href="{{ path ('estimations_uncollected_index') }}">Non collectées</a>
+                        <a href="{{ path ('estimations_uncollected_index') }}">A collecter</a>
                         <a href="{{ path('estimations_collected_index') }}">Collectées</a>
                         <a href="{{ path('estimations_unfinished_index') }}">Inachevées</a>
+                        <a href="{{ path ('estimations_index') }}">Toutes</a>
                     </div>
                 </div>
             </div>
