--- a/assets/scss/partnerPage.scss
+++ b/assets/scss/partnerPage.scss
@@ -33,6 +33,10 @@
             text-align: center;
         }
 
+        .deleteButton {
+            margin-bottom: 20px;
+        }
+
     }
 
     .linkA{
