--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
+    {{ parent() }}
     {{ encore_entry_link_tags('final_estimation') }}
 {% endblock %}
 {% block body %}
@@ -30,7 +31,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="container jumbotron">
         <div class="row">
             <div class="col-11">
