--- a/templates/admin/index_organism.html.twig
+++ b/templates/admin/index_organism.html.twig
@@ -9,8 +9,10 @@
 
 {% block body %}
 
-    <main>
+    <main id="organisms">
         <h1 class="adminTitle primary-title">Les partenaires</h1>
+
+        <a class="secondary-button addOrganism" href="{{ path('organisms_new') }}">Ajouter</a>
 
         <table class="adminPartners">
             <thead id="table-head">
